--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,32 +1,50 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
-    compileSdkVersion 29
+    compileSdk 32
+    buildToolsVersion "33.0.0"
+    ndkVersion "24.0.8215888"
+
     defaultConfig {
-        applicationId 'com.example.hellojni'
-        minSdkVersion 23
-        targetSdkVersion 28
+        applicationId "com.example.hellojni"
+        minSdk 26
+        targetSdk 32
         versionCode 1
         versionName "1.0"
-        ndkVersion '24.0.8215888'
+    
+        externalNativeBuild {
+            cmake {
+                cppFlags ''
+            }
+        }
     }
+    
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'),
-                    'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     externalNativeBuild {
         cmake {
-            version '3.10.2'
-            path "src/main/cpp/CMakeLists.txt"
+            path file('src/main/cpp/CMakeLists.txt')
+            version '3.18.1+'
         }
+    }
+    buildFeatures {
+        viewBinding false
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
