--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdkVersion 29
     buildToolsVersion "33.0.0"
     ndkVersion "24.0.8215888"
 
     defaultConfig {
         applicationId "com.example.hellojni"
-        minSdk 26
-        targetSdk 32
+        minSdkVersion 23
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     
