--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,49 +1,39 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    ndkVersion "24.0.8215888"
-
     defaultConfig {
-        applicationId "com.example.hellojni"
+        applicationId 'com.example.hellojni'
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-    
+        
         externalNativeBuild {
             cmake {
                 cppFlags ''
             }
         }
     }
-    
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
     externalNativeBuild {
         cmake {
-            path file('src/main/cpp/CMakeLists.txt')
             version '3.18.1+'
+            path "src/main/cpp/CMakeLists.txt"
         }
     }
-    buildFeatures {
-        viewBinding false
-    }
+
+    
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
