--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name="cc.binmt.signature.PmsHookApplication">
-        <activity android:name=".PmsHookDetection">
+        <activity android:name=".PmsHookDetection" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
